arrumei um bug pequeno do overflow-x no mobile

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ html {
 body {
   background: var(--bg-color);
   color: var(--text-color);
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar-track {
